Fixed prompt display, command 'silence', and attempted to force focusing on the command box when it changes 'silence'
git-svn-id: https://cixar.com/svns/tale@1033 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/client/@.css
+++ b/client/@.css
@@ -1,5 +1,5 @@
 
-window, body {
+window, body, #prompt {
 	font-family: Verdana;
 	font-size: 12px;
     background-color: #46B3D3;
@@ -38,3 +38,4 @@ window, body {
 .date {
     color: #777777;
 }
+
