Added support for overlays and the persistent world map
git-svn-id: https://cixar.com/svns/tale@1037 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/client/@.css
+++ b/client/@.css
@@ -39,3 +39,17 @@ window, body, #prompt {
     color: #777777;
 }
 
+#widgets {
+    position: fixed;
+    width: 95%;
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    padding: 10px;
+}
+
+#map {
+    text-align: right;
+    padding: 10px;
+}
+
