--- a/client/index.css
+++ b/client/index.css
@@ -1,209 +1,255 @@
 
-window, body, td, th {
-    font-family: monospace;
-    font-size: 20px;
-    color: black;
-}
-
-body {
-    background-color: #46B3D3;
-}
-
 /* layout */
 
-/* lc =  (menu space) */
-/* cc =  (buffer) */
-/* rc =  (map) (ad space) */
+    .content {
+        padding: 5px 20px;
+    }
 
-body {
-    position: relative;
-    text-align: center;
-    margin: 0;
-}
+    /* center column */
 
-#body {
-    margin: 0 auto 0 auto;
-    text-align: left;
-    position: relative;
-    width: 600px;
-    height: 100%;
-}
+        body {
+            position: relative;
+            text-align: center;
+            margin: 0;
+        }
+        
+        #body {
+            margin: 0 auto;
+            text-align: left;
+            position: relative;
+            width: 600px;
+            height: 100%;
+        }
 
-.content {
-    padding: 5px 10px;
-}
+    /* vertical align middle */
+        
+        #horizon {
+            position: absolute;
+            top: 50%;
+            left: 0px;
+            width: 100%;
+            height: 1px;
+            overflow: visible;
+            visibility: visible;
+            display: block;
+        }
+        
+        #deadcentre {
+            position: absolute;
+            top: -260px;
+            width: 100%;
+            padding: 0;
+        }
 
-#left {
-}
-
-#right {
-}
-
-* html #left {
-}
-
-/* style */
-
-h1, h2, h3, h4, h5 {
-    text-align: center;
-    font-family: monospace;
-}
-
-a.choice, .choices a {
-    color: #0055aa;
-    text-decoration: none;
-    background: url(cursor.png) no-repeat left center;
-    padding-left: 26px;
-    opacity: .75;
-}
-
-a.choice:hover, .choices a:hover {
-    opacity: .9999;
-}
-
-hr {
-    border: solid #333355 1px;
-    background-color: #333355;
-}
-
-i {
-    color: white;
-}
-
-#navigation {
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-    margin: 0 auto;
-    margin-bottom: -10px;
-    padding-bottom: 10px;
-    position: fixed;
-    text-align: center;
-    padding-top: 7px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-top: #fff dashed 2px;
-}
-
-.choices {
-    width: 100%;
-    text-align: center;
-    margin: auto auto;
-    font-size: 24px;
-    font-family: monospace;
-}
-.choices a {
-    text-decoration: none;
-    white-space: nowrap;
-    color: #000;
-    opacity: .25;
-    filter: alpha(opacity = 25);
-}
-.choices a img { 
-    height: 1em;
-    border: none;
-    padding-right: .3ex;
-    vertical-align: bottom;
-    font-weight: bold;
-}
-.choices a:hover {
-    opacity: 1;
-    filter: alpha(opacity = 100);
-}
-.choices a:focus {
-    opacity: 1;
-    filter: alpha(opacity = 100);
-}
-
-
-.encounter {
-    text-align: center;
-}
-
-.description {
-    padding: 1em 3em;
-    text-align: center;
-    font-family: monospace;
-    color: #333355;
-}
-
-td, th {
-    border: solid #0055aa 1px;
-    padding: 2px 4px;
-}
-
-/* an attribute for the moinmoin wiki.  Hightlights links to pages
-   that have not been created yet. */
-.nonexistent {
-	color: #aa0055;
-}
-
-#message {
-    border: solid 1px #aa0055;
-    border-raduis: 10px;
-    padding: 10px;
-    margin: 10px;
-}
-
-.diff {
-    width: 99%;
-}
+    /* anchors for fixed sides */
+        
+        #left {
+            position: absolute;
+        }
+        
+        #right {
+            position: absolute;
+            left: 600px;
+        }
     
-.diff > * {
-    font-family: monospace;
-}
+/* typography and colors */
 
-.diff-title {
-}
+    window, body, td, th {
+        font-family: monospace;
+        font-size: 20px;
+        color: black;
+    }
 
-.diff-added {
-	vertical-align: sub;
-}
+    body {
+        background-color: #46B3D3;
+    }
 
-.diff-removed {
-	vertical-align: sub;
-}
+    h1, h2, h3, h4, h5 {
+        text-align: center;
+        font-family: monospace;
+    }
 
-.diff-added span {
-	background-color: #80ff80;
-}
+    hr {
+        border: solid #333355 1px;
+        background-color: #333355;
+    }
 
-.diff-removed span {
-	background-color: #ffff80;
-}
+    i {
+        color: white;
+    }
 
+    td, th {
+        border: solid #0055aa 1px;
+        padding: 2px 4px;
+    }
+
+/* fancy */
+
+    /* menus */
+
+        .menuBar {
+            text-align: center;
+        }
+
+        a.choice, .choices a {
+            color: #0055aa;
+            text-decoration: none;
+            background: url(cursor.png) no-repeat left center;
+            padding-left: 26px;
+            opacity: .75;
+        }
+
+        a.choice:hover, .choices a:hover {
+            opacity: .9999;
+        }
+
+        .choices {
+            width: 100%;
+            text-align: center;
+            margin: auto auto;
+            font-size: 24px;
+        }
+        .choices a {
+            text-decoration: none;
+            white-space: nowrap;
+            color: #000;
+            opacity: .25;
+            filter: alpha(opacity = 25);
+        }
+        .choices a img { 
+            height: 1em;
+            border: none;
+            padding-right: .3ex;
+            vertical-align: bottom;
+            font-weight: bold;
+        }
+        .choices a:hover {
+            opacity: 1;
+            filter: alpha(opacity = 100);
+        }
+        .choices a:focus {
+            opacity: 1;
+            filter: alpha(opacity = 100);
+        }
 
 /* functional */
 
-.menuBar {
-    text-align: center;
-}
+    .encounter {
+        text-align: center;
+    }
 
+    .description {
+        padding: 1em 3em;
+        text-align: center;
+        color: #333355;
+    }
 
+    #message {
+        border: solid 1px #aa0055;
+        border-raduis: 10px;
+        padding: 10px;
+        margin: 10px;
+    }
 
-#commandBar {
-    border: none;
-    border-spacing: 0;
-    margin: 0;
-}
-#commandBar * {
-    border: none;
-}
-#commandBar td.B {
-    width: 100%;
-    padding: 0 1ex;
-}
-#commandBar td.B input {
-    width: 100%;
-    font-size: 1em;
-}
+    /* commands */
 
-#prompt {
-    font-family: Monaco, monospace;
-}
+        #commandBar {
+            border: none;
+            border-spacing: 0;
+            margin: 0;
+        }
 
-#commandLine {
-    width: 100%;
-}
+        #commandBar * {
+            border: none;
+        }
+
+        #commandBar td.B {
+            width: 100%;
+            padding: 0 1ex;
+        }
+
+        #commandBar td.B input {
+            width: 100%;
+            font-size: 1em;
+            font-family: Consolas, monospace;
+            padding: 2px 10px;
+            margin-bottom: 10px;
+            border: solid #333355 1px;
+        }
+
+        #prompt {
+        }
+
+        #commandLine {
+            width: 100%;
+        }
+
+    /* sides */
+
+        #hud {
+            top: 50%;
+            position: fixed;
+        }
+        
+        #map {
+            border: dotted 1px black;
+            position: absolute;
+            height: 300px;
+            width: 300px;
+            top: -150px;
+        }
+        
+        #ad {
+            border: dotted 1px black;
+            position: absolute;
+            height: 600px;
+            width: 120px;
+            top: -300px;
+            left: -280px;
+        }
+        
+        #widgetBar {
+            border: dotted 1px black;
+            position: absolute;
+            height: 300px;
+            width: 80px;
+            top: -150px;
+            left: -120px;
+        }
+        
+    /* moinmoin */
+
+        .diff {
+            width: 99%;
+        }
+            
+        .diff > * {
+            font-family: monospace;
+        }
+
+        .diff-title {
+        }
+
+        .diff-added {
+            vertical-align: sub;
+        }
+
+        .diff-removed {
+            vertical-align: sub;
+        }
+
+        .diff-added span {
+            background-color: #80ff80;
+        }
+
+        .diff-removed span {
+            background-color: #ffff80;
+        }
+
+        /* an attribute for the moinmoin wiki.  Hightlights links to pages
+           that have not been created yet. */
+        .nonexistent {
+            color: #aa0055;
+        }
+
 
