--- a/client/index.css
+++ b/client/index.css
@@ -83,6 +83,10 @@
         padding: 2px 4px;
     }
 
+    abbr {
+        cursor: default;
+    }
+
 /* fancy */
 
     /* menus */
@@ -174,7 +178,9 @@
             font-family: Consolas, monospace;
             padding: 2px 10px;
             margin-bottom: 10px;
-            border: solid #333355 1px;
+            border: solid #6666aa 3px;
+            -webkit-border-radius: 8px;
+            -moz-border-radius: 8px;
         }
 
         #prompt {
@@ -187,8 +193,19 @@
     /* sides */
 
         #hud {
-            top: 50%;
             position: fixed;
+            height: 100%;
+        }
+
+        #hudHorizon {
+            position: absolute;
+            top: 50%;
+            left: 0px;
+            width: 100%;
+            height: 1px;
+            overflow: visible;
+            visibility: visible;
+            display: block;
         }
         
         #map {
@@ -211,10 +228,10 @@
         #widgetBar {
             border: dotted 1px black;
             position: absolute;
-            height: 300px;
+            height: 400px;
             width: 80px;
-            top: -150px;
-            left: -120px;
+            top: -200px;
+            left: -100px;
         }
         
     /* moinmoin */
